--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,7 @@
-# Object files
 *.o
 *.ko
-*.obj
-*.elf
-
-# Libraries
-*.lib
-*.a
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
+.*.cmd
+*.mod.*
+Module.symvers
+modules.order
+.tmp_versions/
